[gd_scene load_steps=12 format=4 uid="uid://w7b1heu0tdn8"]

[ext_resource type="Script" path="res://Scripts/Prefabs/Levels/FFA/ffa_01.gd" id="1_tvr2t"]
[ext_resource type="LabelSettings" uid="uid://dm644nfi0nxiy" path="res://Assets/_Settings/LabelSettings/Main.tres" id="2_i61n2"]
[ext_resource type="FontFile" uid="uid://bbvj3mftecedk" path="res://Assets/Fonts/unicode.futurab.ttf" id="3_7vkm5"]
[ext_resource type="PackedScene" uid="uid://wmpvq2c53b5" path="res://Scenes/Prefabs/UI/multiplayer_ui.tscn" id="4_tcb2h"]
[ext_resource type="PackedScene" uid="uid://bnybsixdqwqbu" path="res://mainTileMap.tscn" id="5_ttwjs"]
[ext_resource type="PackedScene" uid="uid://chr5bm0rlck45" path="res://Scenes/Prefabs/player.tscn" id="6_g01w3"]

[sub_resource type="LabelSettings" id="LabelSettings_ynohh"]
font = ExtResource("3_7vkm5")
font_size = 640
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Environment" id="Environment_iu8ib"]
background_mode = 3
glow_enabled = true
glow_hdr_scale = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_1vuk2"]
font = ExtResource("3_7vkm5")
font_size = 35
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_y78r0"]
font = ExtResource("3_7vkm5")
font_size = 60
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_ci1sr"]

[node name="FFA_03" type="Node2D"]
script = ExtResource("1_tvr2t")

[node name="Countdown" type="Timer" parent="."]
process_callback = 0
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Version" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = -46.0
offset_right = 168.0
offset_bottom = -18.0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "version: 0.0.16"
metadata/_edit_use_anchors_ = true

[node name="TIME" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -110.5
offset_right = 110.5
offset_bottom = 81.0
grow_horizontal = 2
text = "Time:
"
label_settings = ExtResource("2_i61n2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GAME" type="Label" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1088.0
offset_top = -318.5
offset_right = 1088.0
offset_bottom = 318.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME!"
label_settings = SubResource("LabelSettings_ynohh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Multiplayer UI" parent="." instance=ExtResource("4_tcb2h")]

[node name="toResult" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="spawnPower" type="Timer" parent="."]
process_callback = 0
wait_time = 5.0
autostart = true

[node name="TileMapLayer" parent="." instance=ExtResource("5_ttwjs")]
modulate = Color(0.7, 0.7, 0.7, 1)

[node name="Layer 2 (floor)" parent="TileMapLayer" index="0"]
tile_map_data = PackedByteArray("AAAAAAAAAAAFAAAAAAAaAAAAAAAHAAAAAAAaAA4AAAAHAAIAAAAAAA4AAAAFAAIAAAAAAA0AAAAFAAEAAAAAAAwAAAAFAAEAAAAAAAsAAAAFAAEAAAAAAAoAAAAFAAEAAAAAAAkAAAAFAAEAAAAAAAgAAAAFAAEAAAAAAAcAAAAFAAEAAAAAAAYAAAAFAAEAAAAAAAUAAAAFAAEAAAAAAAQAAAAFAAEAAAAAAAMAAAAFAAEAAAAAAAIAAAAFAAEAAAAAAAEAAAAFAAEAAAABAAAAAAAGAAAAAAACAAAAAAAGAAAAAAADAAAAAAAGAAAAAAAEAAAAAAAGAAAAAAAFAAAAAAAGAAAAAAAGAAAAAAAGAAAAAAAHAAAAAAAGAAAAAAAIAAAAAAAGAAAAAAAJAAAAAAAGAAAAAAAKAAAAAAAGAAAAAAALAAAAAAAGAAAAAAAMAAAAAAAGAAAAAAANAAAAAAAGAAAAAAAOAAAAAAAGAAAAAAAPAAAAAAAGAAAAAAAQAAAAAAAGAAAAAAARAAAAAAAGAAAAAAASAAAAAAAGAAAAAAATAAAAAAAGAAAAAAAUAAAAAAAGAAAAAAAVAAAAAAAGAAAAAAAWAAAAAAAGAAAAAAAXAAAAAAAGAAAAAAAYAAAAAAAGAAAAAAAZAAAAAAAGAAAAAAAaAAEAAAAHAAEAAAAaAAIAAAAHAAEAAAAaAAMAAAAHAAEAAAAaAAQAAAAHAAEAAAAaAAUAAAAHAAEAAAAaAAYAAAAHAAEAAAAaAAcAAAAHAAEAAAAaAAgAAAAHAAEAAAAaAAkAAAAHAAEAAAAaAAoAAAAHAAEAAAAaAAsAAAAHAAEAAAAaAAwAAAAHAAEAAAAaAA0AAAAHAAEAAAAZAA4AAAAGAAIAAAAYAA4AAAAGAAIAAAAXAA4AAAAGAAIAAAAWAA4AAAAGAAIAAAAVAA4AAAAGAAIAAAAUAA4AAAAGAAIAAAATAA4AAAAGAAIAAAASAA4AAAAGAAIAAAARAA4AAAAGAAIAAAAQAA4AAAAGAAIAAAAPAA4AAAAGAAIAAAAOAA4AAAAGAAIAAAANAA4AAAAGAAIAAAAMAA4AAAAGAAIAAAALAA4AAAAGAAIAAAAKAA4AAAAGAAIAAAAJAA4AAAAGAAIAAAAIAA4AAAAGAAIAAAAHAA4AAAAGAAIAAAAGAA4AAAAGAAIAAAAFAA4AAAAGAAIAAAAEAA4AAAAGAAIAAAADAA4AAAAGAAIAAAACAA4AAAAGAAIAAAABAA4AAAAGAAIAAAABAAEAAAAGAAEAAAABAAIAAAAGAAEAAAABAAMAAAAGAAEAAAABAAQAAAAGAAEAAAABAAUAAAAGAAEAAAABAAYAAAAGAAEAAAABAAcAAAAGAAEAAAABAAgAAAAGAAEAAAABAAkAAAAGAAEAAAABAAoAAAAGAAEAAAABAAsAAAAGAAEAAAABAAwAAAAGAAEAAAABAA0AAAAGAAEAAAACAAEAAAAGAAEAAAACAAIAAAAGAAEAAAACAAMAAAAGAAEAAAACAAQAAAAGAAEAAAACAAUAAAAGAAEAAAACAAYAAAAGAAEAAAACAAcAAAAGAAEAAAACAAgAAAAGAAEAAAACAAkAAAAGAAEAAAACAAoAAAAGAAEAAAACAAsAAAAGAAEAAAACAAwAAAAGAAEAAAACAA0AAAAGAAEAAAADAAEAAAAGAAEAAAADAAIAAAAGAAEAAAADAAMAAAAGAAEAAAADAAQAAAAGAAEAAAADAAUAAAAGAAEAAAADAAYAAAAGAAEAAAADAAcAAAAGAAEAAAADAAgAAAAGAAEAAAADAAkAAgAAAAAAAGADAAoAAAAGAAEAAAADAAsAAAAGAAEAAAADAAwAAAAGAAEAAAADAA0AAAAGAAEAAAAEAAEAAAAGAAEAAAAEAAIAAAAGAAEAAAAEAAMAAAAGAAEAAAAEAAQAAAAGAAEAAAAEAAUAAAAGAAEAAAAEAAYAAAAGAAEAAAAEAAcAAAAGAAEAAAAEAAgAAAAGAAEAAAAEAAkAAAAGAAEAAAAEAAoAAAAGAAEAAAAEAAsAAAAGAAEAAAAEAAwAAAAGAAEAAAAEAA0AAAAGAAEAAAAFAAEAAAAGAAEAAAAFAAIAAAAGAAEAAAAFAAMAAAAGAAEAAAAFAAQAAAAGAAEAAAAFAAUAAAAGAAEAAAAFAAYAAAAGAAEAAAAFAAcAAAAGAAEAAAAFAAgAAAAGAAEAAAAFAAkAAAAGAAEAAAAFAAoAAAAGAAEAAAAFAAsAAAAGAAEAAAAFAAwAAAAGAAEAAAAFAA0AAAAGAAEAAAAGAAEAAAAGAAEAAAAGAAIAAAAGAAEAAAAGAAMAAAAGAAEAAAAGAAQAAAAGAAEAAAAGAAUAAAAGAAEAAAAGAAYAAAAGAAEAAAAGAAcAAAAGAAEAAAAGAAgAAAAGAAEAAAAGAAkAAAAGAAEAAAAGAAoAAAAGAAEAAAAGAAsAAAAGAAEAAAAGAAwAAAAGAAEAAAAGAA0AAAAGAAEAAAAHAAEAAAAGAAEAAAAHAAIAAAAGAAEAAAAHAAMAAAAGAAEAAAAHAAQAAAAGAAEAAAAHAAUAAAAGAAEAAAAHAAYAAAAGAAEAAAAHAAcAAAAGAAEAAAAHAAgAAAAGAAEAAAAHAAkAAAAGAAEAAAAHAAoAAAAGAAEAAAAHAAsAAAAGAAEAAAAHAAwAAAAGAAEAAAAHAA0AAAAGAAEAAAAIAAEAAAAGAAEAAAAIAAIAAAAGAAEAAAAIAAMAAAAGAAEAAAAIAAQAAAAGAAEAAAAIAAUAAAAGAAEAAAAIAAYAAAAGAAEAAAAIAAcAAAAGAAEAAAAIAAgAAAAGAAEAAAAIAAkAAAAGAAEAAAAIAAoAAAAGAAEAAAAIAAsAAAAGAAEAAAAIAAwAAAAGAAEAAAAIAA0AAAAGAAEAAAAJAAEAAAAGAAEAAAAJAAIAAAAGAAEAAAAJAAMAAAAGAAEAAAAJAAQAAAAGAAEAAAAJAAUAAAAGAAEAAAAJAAYAAAAGAAEAAAAJAAcAAAAGAAEAAAAJAAgAAAAGAAEAAAAJAAkAAAAGAAEAAAAJAAoAAAAGAAEAAAAJAAsAAAAGAAEAAAAJAAwAAAAGAAEAAAAJAA0AAAAGAAEAAAAKAAEAAAAGAAEAAAAKAAIAAAAGAAEAAAAKAAMAAAAGAAEAAAAKAAQAAAAGAAEAAAAKAAUAAAAGAAEAAAAKAAYAAAAGAAEAAAAKAAcAAAAGAAEAAAAKAAgAAAAGAAEAAAAKAAkAAAAGAAEAAAAKAAoAAAAGAAEAAAAKAAsAAgAAAAAAAAAKAAwAAAAGAAEAAAAKAA0AAAAGAAEAAAALAAEAAAAGAAEAAAALAAIAAAAGAAEAAAALAAMAAAAGAAEAAAALAAQAAAAGAAEAAAALAAUAAAAGAAEAAAALAAYAAAAGAAEAAAALAAcAAAAGAAEAAAALAAgAAAAGAAEAAAALAAkAAAAGAAEAAAALAAoAAAAGAAEAAAALAAsAAAAGAAEAAAALAAwAAAAGAAEAAAALAA0AAAAGAAEAAAAMAAEAAAAGAAEAAAAMAAIAAAAGAAEAAAAMAAMAAAAGAAEAAAAMAAQAAAAGAAEAAAAMAAUAAAAGAAEAAAAMAAYAAAAGAAEAAAAMAAcAAAAGAAEAAAAMAAgAAAAGAAEAAAAMAAkAAAAGAAEAAAAMAAoAAAAGAAEAAAAMAAsAAAAGAAEAAAAMAAwAAAAGAAEAAAAMAA0AAAAGAAEAAAANAAEAAAAGAAEAAAANAAIAAAAGAAEAAAANAAMAAAAGAAEAAAANAAQAAAAGAAEAAAANAAUAAAAGAAEAAAANAAYAAAAGAAEAAAANAAcAAAAGAAEAAAANAAgAAAAGAAEAAAANAAkAAAAGAAEAAAANAAoAAAAGAAEAAAANAAsAAAAGAAEAAAANAAwAAAAGAAEAAAANAA0AAAAGAAEAAAAOAAEAAAAGAAEAAAAOAAIAAAAGAAEAAAAOAAMAAAADAAAAAAAOAAQAAAAGAAEAAAAOAAUAAAAGAAEAAAAOAAYAAAAGAAEAAAAOAAcAAAAGAAEAAAAOAAgAAAADAAAAADAOAAkAAAAGAAEAAAAOAAoAAAAGAAEAAAAOAAsAAAAGAAEAAAAOAAwAAAAGAAEAAAAOAA0AAAAGAAEAAAAPAAEAAAAGAAEAAAAPAAIAAAAGAAEAAAAPAAMAAAADAAAAAAAPAAQAAAAGAAEAAAAPAAUAAAAGAAEAAAAPAAYAAAAGAAEAAAAPAAcAAAAGAAEAAAAPAAgAAAADAAAAADAPAAkAAAAGAAEAAAAPAAoAAAAGAAEAAAAPAAsAAAAGAAEAAAAPAAwAAAAGAAEAAAAPAA0AAAAGAAEAAAAQAAEAAAAGAAEAAAAQAAIAAAAGAAEAAAAQAAMAAAADAAAAAAAQAAQAAAAGAAEAAAAQAAUAAAAGAAEAAAAQAAYAAAAGAAEAAAAQAAcAAAAGAAEAAAAQAAgAAAADAAAAADAQAAkAAAAGAAEAAAAQAAoAAAAGAAEAAAAQAAsAAAAGAAEAAAAQAAwAAAAGAAEAAAAQAA0AAAAGAAEAAAARAAEAAAAGAAEAAAARAAIAAAAGAAEAAAARAAMAAAADAAAAAAARAAQAAAAGAAEAAAARAAUAAAAGAAEAAAARAAYAAAAGAAEAAAARAAcAAAAGAAEAAAARAAgAAAADAAAAADARAAkAAAAGAAEAAAARAAoAAAAGAAEAAAARAAsAAAAGAAEAAAARAAwAAAAGAAEAAAARAA0AAAAGAAEAAAASAAEAAAAGAAEAAAASAAIAAAAGAAEAAAASAAMAAAADAAAAAAASAAQAAAADAAAAAGASAAUAAAADAAAAAGASAAYAAAADAAAAAGASAAcAAAADAAAAAGASAAgAAAADAAAAADASAAkAAAAGAAEAAAASAAoAAAAGAAEAAAASAAsAAAAGAAEAAAASAAwAAAAGAAEAAAASAA0AAAAGAAEAAAATAAEAAAAGAAEAAAATAAIAAAAGAAEAAAATAAMAAAAGAAEAAAATAAQAAAAGAAEAAAATAAUAAAAGAAEAAAATAAYAAAAGAAEAAAATAAcAAAAGAAEAAAATAAgAAAAGAAEAAAATAAkAAAAGAAEAAAATAAoAAAAGAAEAAAATAAsAAAAGAAEAAAATAAwAAAAGAAEAAAATAA0AAAAGAAEAAAAUAAEAAAAGAAEAAAAUAAIAAAAGAAEAAAAUAAMAAAAGAAEAAAAUAAQAAAAGAAEAAAAUAAUAAAAGAAEAAAAUAAYAAAAGAAEAAAAUAAcAAAAGAAEAAAAUAAgAAAAGAAEAAAAUAAkAAAAGAAEAAAAUAAoAAAAGAAEAAAAUAAsAAAAGAAEAAAAUAAwAAAAGAAEAAAAUAA0AAAAGAAEAAAAVAAEAAAAGAAEAAAAVAAIAAAAGAAEAAAAVAAMAAAAGAAEAAAAVAAQAAQAAAAAAAAAVAAUAAAAGAAEAAAAVAAYAAAAGAAEAAAAVAAcAAAAGAAEAAAAVAAgAAAAGAAEAAAAVAAkAAAAGAAEAAAAVAAoAAAAGAAEAAAAVAAsAAAAGAAEAAAAVAAwAAAAGAAEAAAAVAA0AAAAGAAEAAAAWAAEAAAAGAAEAAAAWAAIAAAAGAAEAAAAWAAMAAAAGAAEAAAAWAAQAAAAGAAEAAAAWAAUAAAAGAAEAAAAWAAYAAAAGAAEAAAAWAAcAAAAGAAEAAAAWAAgAAAAGAAEAAAAWAAkAAAAGAAEAAAAWAAoAAAAGAAEAAAAWAAsAAAAGAAEAAAAWAAwAAAAGAAEAAAAWAA0AAAAGAAEAAAAXAAEAAAAGAAEAAAAXAAIAAAAGAAEAAAAXAAMAAAAGAAEAAAAXAAQAAAAGAAEAAAAXAAUAAAAGAAEAAAAXAAYAAAAGAAEAAAAXAAcAAAAGAAEAAAAXAAgAAAAGAAEAAAAXAAkAAAAGAAEAAAAXAAoAAAAGAAEAAAAXAAsAAAAGAAEAAAAXAAwAAAAGAAEAAAAXAA0AAAAGAAEAAAAYAAEAAAAGAAEAAAAYAAIAAAAGAAEAAAAYAAMAAAAGAAEAAAAYAAQAAAAGAAEAAAAYAAUAAAAGAAEAAAAYAAYAAAAGAAEAAAAYAAcAAAAGAAEAAAAYAAgAAAAGAAEAAAAYAAkAAAAGAAEAAAAYAAoAAAAGAAEAAAAYAAsAAAAGAAEAAAAYAAwAAAAGAAEAAAAYAA0AAAAGAAEAAAAZAAEAAAAGAAEAAAAZAAIAAAAGAAEAAAAZAAMAAAAGAAEAAAAZAAQAAAAGAAEAAAAZAAUAAAAGAAEAAAAZAAYAAAAGAAEAAAAZAAcAAAAGAAEAAAAZAAgAAAAGAAEAAAAZAAkAAAAGAAEAAAAZAAoAAAAGAAEAAAAZAAsAAAAGAAEAAAAZAAwAAAAGAAEAAAAZAA0AAAAGAAEAAAA=")

[node name="Layer 1 (walls)" parent="TileMapLayer" index="1"]
tile_map_data = PackedByteArray("AAAAAP//AAADAAMAAAABAP//AAADAAMAAAACAP//AAADAAMAAAADAP//AAADAAMAAAAEAP//AAADAAMAAAAFAP//AAADAAMAAAAGAP//AAADAAMAAAAHAP//AAADAAMAAAAIAP//AAADAAMAAAAJAP//AAADAAMAAAAKAP//AAADAAMAAAALAP//AAADAAMAAAAMAP//AAADAAMAAAANAP//AAADAAMAAAAOAP//AAADAAMAAAAPAP//AAADAAMAAAAQAP//AAADAAMAAAARAP//AAADAAMAAAASAP//AAADAAMAAAATAP//AAADAAMAAAAUAP//AAADAAMAAAAVAP//AAADAAMAAAAWAP//AAADAAMAAAAXAP//AAADAAMAAAAYAP//AAADAAMAAAAZAP//AAADAAMAAAAaAP//AAADAAMAAAAbAP//AAADAAMAAGAbAAAAAAADAAMAAGAbAAEAAAADAAMAAGAbAAIAAAADAAMAAGAbAAMAAAADAAMAAGAbAAQAAAADAAMAAGAbAAUAAAADAAMAAGAbAAYAAAADAAMAAGAbAAcAAAADAAMAAGAbAAgAAAADAAMAAGAbAAkAAAADAAMAAGAbAAoAAAADAAMAAGAbAAsAAAADAAMAAGAbAAwAAAADAAMAAGAbAA0AAAADAAMAAGAbAA4AAAADAAMAAGAAAA8AAAADAAMAADABAA8AAAADAAMAADACAA8AAAADAAMAADADAA8AAAADAAMAADAEAA8AAAADAAMAADAFAA8AAAADAAMAADAGAA8AAAADAAMAADAHAA8AAAADAAMAADAIAA8AAAADAAMAADAJAA8AAAADAAMAADAKAA8AAAADAAMAADALAA8AAAADAAMAADAMAA8AAAADAAMAADANAA8AAAADAAMAADAOAA8AAAADAAMAADAPAA8AAAADAAMAADAQAA8AAAADAAMAADARAA8AAAADAAMAADASAA8AAAADAAMAADATAA8AAAADAAMAADAUAA8AAAADAAMAADAVAA8AAAADAAMAADAWAA8AAAADAAMAADAXAA8AAAADAAMAADAYAA8AAAADAAMAADAZAA8AAAADAAMAADAaAA8AAAADAAMAADAbAA8AAAADAAMAADD/////AAADAAMAAFD//wAAAAADAAMAAFD//wEAAAADAAMAAFD//wIAAAADAAMAAFD//wMAAAADAAMAAFD//wQAAAADAAMAAFD//wUAAAADAAMAAFD//wYAAAADAAMAAFD//wcAAAADAAMAAFD//wgAAAADAAMAAFD//wkAAAADAAMAAFD//woAAAADAAMAAFD//wsAAAADAAMAAFD//wwAAAADAAMAAFD//w0AAAADAAMAAFD//w4AAAADAAMAAFD//w8AAAADAAMAAFADAAwAAAADAAMAAAADAAsAAAADAAIAAAAEAAwAAAADAAMAAAAEAAsAAAADAAIAAAAFAAwAAAADAAMAAAAFAAsAAAADAAIAAAAGAAwAAAADAAMAAAAGAAsAAAADAAIAAAAHAAwAAAADAAMAAAAHAAsAAAADAAIAAAAIAAwAAAADAAMAAAAIAAsAAAADAAIAAAAJAAwAAAADAAMAAAAJAAsAAAADAAIAAAAHAAgAAAAEAAAAAAAHAAkAAAADAAMAAAAHAAcAAAAEAAAAAAAHAAYAAAAEAAAAAAAHAAUAAAAEAAAAAAAHAAQAAAAEAAAAAAAHAAMAAAADAAIAAAALAAIAAAADAAMAAAALAAEAAAADAAIAAAAMAAIAAAADAAMAAAAMAAEAAAADAAIAAAANAAIAAAADAAMAAAANAAEAAAADAAIAAAAOAAIAAAADAAMAAAAOAAEAAAADAAIAAAAPAAIAAAADAAMAAAAPAAEAAAADAAIAAAAQAAIAAAADAAMAAAAQAAEAAAADAAIAAAAUAAwAAAADAAMAAAAUAAsAAAADAAIAAAAVAAsAAAADAAMAAAAVAAoAAAADAAIAAAAWAAoAAAADAAMAAAAWAAkAAAADAAIAAAAXAAkAAAADAAMAAAAXAAgAAAADAAIAAAAXAAcAAAAEAAAAAAAXAAYAAAAEAAAAAAAXAAUAAAAEAAAAAAAXAAQAAAAEAAAAAAAXAAMAAAAEAAAAAAAXAAIAAAADAAIAAAAMAAYAAAADAAMAAAAMAAUAAAADAAIAAAANAAYAAAADAAMAAAANAAUAAAADAAIAAAAOAAYAAAADAAMAAAAOAAUAAAADAAIAAAAPAAYAAAADAAMAAAAPAAUAAAADAAIAAAAQAAYAAAADAAMAAAAQAAUAAAADAAIAAAARAAYAAAADAAMAAAARAAUAAAADAAIAAAAOAAwAAAAEAAAAAAAOAA0AAAADAAMAAAAOAAsAAAAEAAAAAAAOAAoAAAAEAAAAAAAOAAkAAAAEAAAAAAAOAAgAAAADAAIAAAABAAMAAAADAAMAAAABAAIAAAADAAIAAAACAAMAAAADAAMAAAACAAIAAAADAAIAAAADAAMAAAADAAMAAAADAAIAAAADAAIAAAAEAAMAAAADAAMAAAAEAAIAAAADAAIAAAA=")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 20.0
one_shot = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_iu8ib")

[node name="Game Name" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="Game Name"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Game Name" type="Label" parent="Game Name/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -452.0
offset_top = 84.0
offset_right = -63.0
offset_bottom = 249.0
grow_horizontal = 0
pivot_offset = Vector2(195, 83)
text = "BLOCKY
BLASTERS"
label_settings = ExtResource("2_i61n2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Leaderboard" type="Label" parent="Game Name/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -40.5
offset_right = 809.0
offset_bottom = 40.5
grow_vertical = 2
pivot_offset = Vector2(195, 83)
text = "Leaderboard:"
label_settings = SubResource("LabelSettings_1vuk2")
vertical_alignment = 1

[node name="Description" type="Label" parent="Game Name/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 280.0
offset_top = -81.0
offset_right = 1089.0
grow_vertical = 0
pivot_offset = Vector2(195, 83)
text = "5 PESOS PER HEAD"
label_settings = ExtResource("2_i61n2")
vertical_alignment = 1

[node name="Description2" type="Label" parent="Game Name/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1048.0
offset_top = -81.0
offset_right = -239.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(195, 83)
text = "FREE FOR ALL | SURVIVAL(2x money)"
label_settings = SubResource("LabelSettings_y78r0")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Description3" type="Label" parent="Game Name/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -481.0
offset_top = 40.0
offset_right = 481.0
offset_bottom = 121.0
grow_horizontal = 2
pivot_offset = Vector2(195, 83)
text = "2-5 PLAYER MUTIPLAYER!"
label_settings = ExtResource("2_i61n2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Game Name/Control"]
modulate = Color(0.318, 0.459, 1.636, 1)
z_index = -1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 144.0
grow_horizontal = 2
texture = SubResource("CanvasTexture_ci1sr")

[node name="TextureRect2" type="TextureRect" parent="Game Name/Control"]
modulate = Color(0.318, 0.459, 1.636, 1)
z_index = -1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -104.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(0, 104)
texture = SubResource("CanvasTexture_ci1sr")

[node name="TextureRect3" type="TextureRect" parent="Game Name/Control"]
modulate = Color(0.318, 0.459, 1.636, 1)
z_index = -1
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 248.0
grow_vertical = 2
texture = SubResource("CanvasTexture_ci1sr")

[node name="TextureRect4" type="TextureRect" parent="Game Name/Control"]
modulate = Color(0.318, 0.459, 1.636, 1)
z_index = -1
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
grow_horizontal = 0
grow_vertical = 2
texture = SubResource("CanvasTexture_ci1sr")

[node name="Player" parent="." instance=ExtResource("6_g01w3")]
position = Vector2(520, 560)
isTutorial = true

[node name="Player2" parent="." instance=ExtResource("6_g01w3")]
position = Vector2(1555, 581)
isAI = true
playerIndex = 0

[connection signal="timeout" from="Countdown" to="." method="UpdateTime"]
[connection signal="timeout" from="toResult" to="." method="toResult"]
[connection signal="timeout" from="spawnPower" to="." method="newPowerUp"]
[connection signal="timeout" from="Timer" to="." method="nextIdleMap"]

[editable path="TileMapLayer"]
